{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 16,
  "lineage": "26aabdaf-2cf0-61f7-1696-c9a8564c4373",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "managementnet-allow-icmp-ssh-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "3389"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-04-29T04:55:56.639-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-01-823a9d21a092/global/firewalls/managementnet-allow-icmp-ssh-rdp",
            "log_config": [],
            "name": "managementnet-allow-icmp-ssh-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/global/networks/managementnet",
            "priority": 1000,
            "project": "qwiklabs-gcp-01-823a9d21a092",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/global/firewalls/managementnet-allow-icmp-ssh-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.managementnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "privatenet-allow-icmp-ssh-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "3389"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-04-29T04:55:56.608-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-01-823a9d21a092/global/firewalls/privatenet-allow-icmp-ssh-rdp",
            "log_config": [],
            "name": "privatenet-allow-icmp-ssh-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/global/networks/privatenet",
            "priority": 1000,
            "project": "qwiklabs-gcp-01-823a9d21a092",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/global/firewalls/privatenet-allow-icmp-ssh-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.privatenet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "managementnet-us-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230411",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/zones/us-east1-c/disks/managementnet-us-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-01-823a9d21a092/zones/us-east1-c/instances/managementnet-us-vm",
            "instance_id": "7301873250229861172",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "Lfnxg6ozDTk=",
            "name": "managementnet-us-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.196.229.211",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/global/networks/managementnet",
                "network_ip": "10.130.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/regions/us-east1/subnetworks/managementsubnet-us",
                "subnetwork_project": "qwiklabs-gcp-01-823a9d21a092"
              }
            ],
            "project": "qwiklabs-gcp-01-823a9d21a092",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/zones/us-east1-c/instances/managementnet-us-vm",
            "service_account": [
              {
                "email": "865857729527-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "data.google_compute_default_service_account.default",
            "google_compute_network.managementnet",
            "google_compute_subnetwork.managementsubnet-us"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "privatenet-us-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230411",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/zones/us-east1-c/disks/privatenet-us-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-01-823a9d21a092/zones/us-east1-c/instances/privatenet-us-vm",
            "instance_id": "5008681672776923956",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "Lfnxg6ozDTk=",
            "name": "privatenet-us-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.237.92.160",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/global/networks/privatenet",
                "network_ip": "172.16.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/regions/us-east1/subnetworks/privatesubnet-us",
                "subnetwork_project": "qwiklabs-gcp-01-823a9d21a092"
              }
            ],
            "project": "qwiklabs-gcp-01-823a9d21a092",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/zones/us-east1-c/instances/privatenet-us-vm",
            "service_account": [
              {
                "email": "865857729527-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "data.google_compute_default_service_account.default",
            "google_compute_network.privatenet",
            "google_compute_subnetwork.privatesubnet-us"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm-appliance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230411",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/zones/us-east1-c/disks/vm-appliance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-01-823a9d21a092/zones/us-east1-c/instances/vm-appliance",
            "instance_id": "7382952096655521454",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-4",
            "metadata_fingerprint": "Lfnxg6ozDTk=",
            "name": "vm-appliance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.139.221.27",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/global/networks/privatenet",
                "network_ip": "172.16.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/regions/us-east1/subnetworks/privatesubnet-us",
                "subnetwork_project": "qwiklabs-gcp-01-823a9d21a092"
              },
              {
                "access_config": [
                  {
                    "nat_ip": "34.139.91.53",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/global/networks/managementnet",
                "network_ip": "10.130.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/regions/us-east1/subnetworks/managementsubnet-us",
                "subnetwork_project": "qwiklabs-gcp-01-823a9d21a092"
              },
              {
                "access_config": [
                  {
                    "nat_ip": "34.138.199.228",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic2",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/global/networks/mynetwork",
                "network_ip": "10.142.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/regions/us-east1/subnetworks/mynetwork",
                "subnetwork_project": "qwiklabs-gcp-01-823a9d21a092"
              }
            ],
            "project": "qwiklabs-gcp-01-823a9d21a092",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/zones/us-east1-c/instances/vm-appliance",
            "service_account": [
              {
                "email": "865857729527-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "data.google_compute_default_service_account.default",
            "google_compute_subnetwork.managementsubnet-us",
            "google_compute_subnetwork.privatesubnet-us"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "managementnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "managementnet description",
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-01-823a9d21a092/global/networks/managementnet",
            "mtu": 0,
            "name": "managementnet",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "qwiklabs-gcp-01-823a9d21a092",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/global/networks/managementnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "privatenet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "privatenet",
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-01-823a9d21a092/global/networks/privatenet",
            "mtu": 0,
            "name": "privatenet",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "qwiklabs-gcp-01-823a9d21a092",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/global/networks/privatenet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "managementsubnet-us",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-29T04:55:57.040-07:00",
            "gateway_address": "10.130.0.1",
            "id": "projects/qwiklabs-gcp-01-823a9d21a092/regions/us-east1/subnetworks/managementsubnet-us",
            "ip_cidr_range": "10.130.0.0/20",
            "name": "managementsubnet-us",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/global/networks/managementnet",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-01-823a9d21a092",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/regions/us-east1/subnetworks/managementsubnet-us",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.managementnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "privatesubnet-eu",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-29T04:55:57.474-07:00",
            "gateway_address": "172.20.0.1",
            "id": "projects/qwiklabs-gcp-01-823a9d21a092/regions/europe-west1/subnetworks/privatesubnet-eu",
            "ip_cidr_range": "172.20.0.0/20",
            "name": "privatesubnet-eu",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/global/networks/privatenet",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-01-823a9d21a092",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/regions/europe-west1/subnetworks/privatesubnet-eu",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.privatenet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "privatesubnet-us",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-29T04:55:57.036-07:00",
            "gateway_address": "172.16.0.1",
            "id": "projects/qwiklabs-gcp-01-823a9d21a092/regions/us-east1/subnetworks/privatesubnet-us",
            "ip_cidr_range": "172.16.0.0/24",
            "name": "privatesubnet-us",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/global/networks/privatenet",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-01-823a9d21a092",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-823a9d21a092/regions/us-east1/subnetworks/privatesubnet-us",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.privatenet"
          ]
        }
      ]
    }
  ]
}